crates/language-tests/tests/parsing/errors/missed_qoute_object.surql
{"id:0,"method":"query","params": ["SLEEP 30s"]}
